--- a/package.json
+++ b/package.json
@@ -21,12 +21,19 @@
   "bin": {
     "pokego-scan": "cli.js"
   },
+  "scripts": {
+    "test": "node test.js"
+  },
   "dependencies": {
     "async": "^2.0.0",
+    "cloudscraper": "^1.3.0",
     "debug": "^2.2.0",
     "geolib": "^2.0.21",
     "is-function": "^1.0.1",
-    "minimist": "^1.2.0",
-    "cloudscraper": "^1.3.0"
+    "minimist": "^1.2.0"
+  },
+  "devDependencies": {
+    "nock": "^8.0.0",
+    "tape": "^4.6.0"
   }
 }
